catkin_ws/logs/frontend/build.make.201.log.stderr
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h: In constructor ‘SLAM::Frame::Frame(boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<cv::Mat>&, boost::shared_ptr<double>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h:250:26: warning: ‘SLAM::Frame::newNodeFlag’ will be initialized after [-Wreorder]
  boost::shared_ptr<bool> newNodeFlag;
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h:249:26: warning:   ‘boost::shared_ptr<bool> SLAM::Frame::dummyFrameFlag’ [-Wreorder]
  boost::shared_ptr<bool> dummyFrameFlag; 
                          ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:7:0:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h:257:37: warning: ‘SLAM::Frame::pos’ will be initialized after [-Wreorder]
  boost::shared_ptr<Eigen::Matrix4f> pos;
                                     ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h:253:28: warning:   ‘boost::shared_ptr<double> SLAM::Frame::time’ [-Wreorder]
  boost::shared_ptr<double> time;
                            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:18:1: warning:   when initialized here [-Wreorder]
 Frame::Frame(boost::shared_ptr<cv::Mat>& rgbImage, boost::shared_ptr<cv::Mat>& grayImage, boost::shared_ptr<cv::Mat>& depthImage, boost::shared_ptr<double>& timeStamp)
 ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:28:9: error: ‘Matrix’ was not declared in this scope
  *pos = Matrix<float, 4, 4>::Identity();
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:28:9: note: suggested alternative:
In file included from /usr/include/eigen3/Eigen/Core:252:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/include/Frame.h:18,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:7:
/usr/include/eigen3/Eigen/src/Core/util/ForwardDeclarations.h:70:9: note:   ‘Eigen::Matrix’
 > class Matrix;
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:28:16: error: expected primary-expression before ‘float’
  *pos = Matrix<float, 4, 4>::Identity();
                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/frontend/src/Frame.cpp:28:16: error: expected ‘;’ before ‘float’
make[2]: *** [CMakeFiles/SLAM.dir/src/Frame.cpp.o] Error 1
make[1]: *** [CMakeFiles/SLAM.dir/all] Error 2
make: *** [all] Error 2
